Build upon our oracle-java8 image and use vendor mongodb

--- a/unifi/Dockerfile
+++ b/unifi/Dockerfile
@@ -1,13 +1,17 @@
-FROM java:7-jre
+FROM farsetlabs/oracle-java8
 MAINTAINER Dan Porter <dpreid@gmail.com>
 
+# Define commonly used JAVA_HOME variable
+ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
+
 # MongoDB & JSVC
-RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10 \
-    && echo "deb http://repo.mongodb.org/apt/debian wheezy/mongodb-org/3.0 main" > /etc/apt/sources.list.d/mongodb-org-3.0.list \
-    && apt-get update && apt-get -y install mongodb-server jsvc
+RUN apt-get update \
+    && apt-get -y install mongodb-server jsvc \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # UniFi 4.x
-RUN curl -L -o unifi_sysvinit_all.deb https://www.ubnt.com/downloads/unifi/4.6.6/unifi_sysvinit_all.deb \
+RUN wget -O unifi_sysvinit_all.deb https://www.ubnt.com/downloads/unifi/4.6.6/unifi_sysvinit_all.deb \
     && dpkg --install unifi_sysvinit_all.deb \
     && rm -f unifi_sysvinit_all.deb \
     && rm -rf /var/lib/unifi/*
